v1 of THE SWEDISHINATOR

--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
+<!doctype html>
 <html>
-  <head><title>Hello</title></head>
-  <body>Hello world</body>
+<head>
+  <meta charset="utf-8" />
+  <title>Index 2</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <style>
+    html,body{height:100%;margin:0}
+    body{display:flex;align-items:center;justify-content:center;background:#0b0b0b;color:#fff;font-family:Inter,system-ui,Arial,sans-serif}
+    a.button{display:inline-block;padding:12px 20px;background:rgba(255,255,255,0.06);border:1px solid rgba(255,255,255,0.08);border-radius:10px;color:#fff;text-decoration:none;font-weight:300}
+    a.button:hover{background:rgba(255,255,255,0.09)}
+  </style>
+</head>
+<body>
+  <a class="button" href="swedishinator.html" role="button">Open Swedishinator</a>
+</body>
 </html>
