--- a/swedishinator.html
+++ b/swedishinator.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>The Swedishinator</title>
   <style>
     /* make sizing predictable so padding doesn't add unexpected scrollbars */
@@ -33,14 +34,15 @@
     .bg-wrap.bg-fallback {
       background: #000000;
     }
+    /* make the blurred background extend into iPhone safe areas */
     .bg-wrap .bg-img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      width: 100%;
-      height: 100%;
+      position: fixed;
+      top: calc(-1 * env(safe-area-inset-top));
+      left: calc(-1 * env(safe-area-inset-left));
+      right: calc(-1 * env(safe-area-inset-right));
+      bottom: calc(-1 * env(safe-area-inset-bottom));
+      width: calc(100% + env(safe-area-inset-left) + env(safe-area-inset-right));
+      height: calc(100% + env(safe-area-inset-top) + env(safe-area-inset-bottom));
       transform: scale(1.06);
       object-fit: cover;
       object-position: center center;
@@ -65,7 +67,8 @@
     body {
       font-family: 'Inter', sans-serif;
       margin: 0;
-      padding: 20px;
+      /* include safe-area insets in body padding so content isn't hidden under notch/home indicator */
+      padding: calc(20px + env(safe-area-inset-top)) calc(20px + env(safe-area-inset-right)) calc(20px + env(safe-area-inset-bottom)) calc(20px + env(safe-area-inset-left));
       color: #212529;
       min-height: 100vh;
       position: relative;
