--- a/swedishinator.html
+++ b/swedishinator.html
@@ -28,40 +28,21 @@
       pointer-events: none;
       overflow: hidden;
       display: block;
-      /* ensure there's always a solid black backing behind the image */
-      background: #000000;
+      /* solid black backing so any tiny gaps are black */
+      background-color: #000000;
+      /* use CSS background-image to reliably cover the viewport */
+      background-image: url('felix-rottmann-ADGPyb9jJKE-unsplash.jpg');
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
     }
-    /* Fallback styling applied when the image fails to load */
-    .bg-wrap.bg-fallback {
-      background: #000000;
-    }
-    /* make the blurred background extend into iPhone safe areas */
-    .bg-wrap .bg-img {
-      position: fixed;
-      top: calc(-1 * env(safe-area-inset-top));
-      left: calc(-1 * env(safe-area-inset-left));
-      right: calc(-1 * env(safe-area-inset-right));
-      bottom: calc(-1 * env(safe-area-inset-bottom));
-      width: calc(100% + env(safe-area-inset-left) + env(safe-area-inset-right));
-      height: calc(100% + env(safe-area-inset-top) + env(safe-area-inset-bottom));
-      transform: scale(1.06);
-      object-fit: cover;
-      object-position: center center;
-      -webkit-user-drag: none;
-      user-select: none;
-      filter: blur(60px);
-      will-change: transform, filter;
-      backface-visibility: hidden;
-      display: block;
-    }
+    /* Fallback: keep black backing if image not available */
+    .bg-wrap.bg-fallback { background-color: #000000; }
 
     /* Mobile: disable fixed attachment (causes issues), and slightly scale the background so
        the blurred image fills the viewport without changing aspect ratio */
     @media (max-width: 768px) {
-      .bg-wrap .bg-img {
-        transform: scale(1.18);
-        filter: blur(66px);
-      }
       /* ensure the viewport fits the page without accidental scrollbars */
       body { padding-top: 18px; padding-bottom: 18px; }
     }
@@ -78,26 +59,20 @@
       .columns { gap: 12px; }
 
       /* reduce background blur on small screens for performance and sharper look */
-      .bg-wrap .bg-img { filter: blur(40px) !important; transform: scale(1.12) !important; }
+      .bg-wrap { filter: none !important; }
 
       /* force full-coverage background on small devices (cover safe areas and notches)
-         expand the image beyond the viewport by the safe-area insets so no gaps appear */
-      .bg-wrap { background: #000000; }
-      /* extend background further beyond safe areas to avoid any visible gaps */
-      :root { --bg-extra: 48px; }
-      .bg-wrap .bg-img {
-        position: fixed !important;
-        /* push edges further out than the safe-area insets */
-        top: calc(-1 * (env(safe-area-inset-top, 0px) + var(--bg-extra)));
-        bottom: calc(-1 * (env(safe-area-inset-bottom, 0px) + var(--bg-extra)));
-        left: calc(-1 * (env(safe-area-inset-left, 0px) + var(--bg-extra)));
-        right: calc(-1 * (env(safe-area-inset-right, 0px) + var(--bg-extra)));
-        /* let left/right/top/bottom drive the sizing so the image fully covers */
-        width: auto;
-        height: auto;
-        object-fit: cover;
-        object-position: center center;
-        transform: none !important;
+         expand the bg-wrap beyond the viewport by the safe-area insets plus a small safety margin */
+      .bg-wrap {
+        background-color: #000000;
+        top: calc(-1 * env(safe-area-inset-top, 0px) - 8px);
+        left: calc(-1 * env(safe-area-inset-left, 0px) - 8px);
+        right: calc(-1 * env(safe-area-inset-right, 0px) - 8px);
+        bottom: calc(-1 * env(safe-area-inset-bottom, 0px) - 8px);
+        width: calc(100vw + env(safe-area-inset-left, 0px) + env(safe-area-inset-right, 0px) + 16px);
+        height: calc(100vh + env(safe-area-inset-top, 0px) + env(safe-area-inset-bottom, 0px) + 16px);
+        background-size: cover;
+        background-position: center center;
       }
 
       /* reduce global body padding while still respecting safe-area */
@@ -523,9 +498,7 @@
   </style>
 </head>
 <body>
-  <div class="bg-wrap" aria-hidden="true">
-    <img class="bg-img" src="felix-rottmann-ADGPyb9jJKE-unsplash.jpg" alt="" loading="eager" decoding="async" onerror="this.style.display='none';this.parentElement.classList.add('bg-fallback')" />
-  </div>
+  <div class="bg-wrap" aria-hidden="true"></div>
   <div class="bg-fade top" aria-hidden="true"></div>
   <div class="bg-fade bottom" aria-hidden="true"></div>
   <h1>The Swedishinator</h1>
